# ByteToy

./: .gitignore  changelog.md  genezio.yaml  package-lock.json  package.json
chartSay/: README.md  changelog.md  package-lock.json  package.json
chartSay/agent/: .env  DataFormatter.py  DatabaseManager.py  LLMManager.py  SQLAgent.py  WorkflowManager.py  graph_instructions.py  langgraph.json  main.py
chartSay/frontend/: package-lock.json  package.json  pnpm-lock.yaml
insight/: .env.local  .env.prod  .eslintignore  README.md  actions.ts  changelog.md  drizzle.config.ts  makefile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
insight/actions/: auth.ts  dataflowConfig.ts  datasource.ts  select.ts
insight/app/: actions.ts  core.ts  globals.css  layout.tsx  page.tsx
insight/components/: QueryBuilder.tsx  query-builder.tsx
insight/config/: filters.ts
insight/core/: .env  app.py  dataVisualizer.py  dataVisualizerManager.py  interfaces.py  pyproject.toml  readcode.md  requirements.txt  test_curl.md  test_data.py  utils.py
insight/core/natural_imagee_config/: tools.py
insight/core/natural_imagee_config/agent/: __init__.py  configuration.py  graph.py  langgraph.json  tools.py
insight/core/natural_imagee_config/tests/integration_tests/: test_graph.py
insight/dockerfiles/: docker-compose.yaml  fastapi.Dockerfile  nextjs.Dockerfile  pogstgres.Dockerfile
insight/hook/: useDataFlow.tsx  useDatasource.tsx
insight/hooks/: useDataflowStorage.tsx  useDatasource.tsx
insight/lib/: chart-examples.ts  db.ts  rechart-format.ts  schema.ts  types.ts  utils.ts
insight/scripts/: run-seed.sh
insight/search/: page.tsx
insight/services/: index.ts
insight/test/: actual-table-data.ts  create-test-table.ts  run-seed.ts  sample_data.csv  test-table-data.ts
joker/: README.md  actions.ts  drizzle.config.ts  mask.md  package-lock.json  package.json  pnpm-lock.yaml  schema.ts  seed.ts  tailwind.config.ts  test.mjs
joker/ai_core/: main.py  outline_generator.py  pyproject.toml  source_searcher.py
joker/ai_core/tests/: test_source_searcher.py
joker/app/: globals.css  layout.tsx  page.tsx
joker/components/: full-loading.tsx  loading.tsx
joker/hook/: useDatasource.ts  useEditor.ts  useInput.ts  useOutline.ts  useOutlineCreator.ts  useOutlineGenerator.ts  useOutlineService.ts  useOutlineState.ts  useText.ts
joker/lib/: drizzle.ts  services.ts
joker/prisma/: schema.prisma  seed.ts
joker/server/: datasource.ts  generateBlock.ts  generateContent.ts  praams.ts  (+3 more)
learn-english/: package-lock.json  package.json
mock_dropbox/: .prettierrc.json  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
note/: adapter_pattern.md  decorator_pattern.md  factory_pattern.md  observer_pattern.md  readme.md  singleton_pattern.md  strategy_pattern.md
scripts/: seed-run.sh
shadow/: .env  .eslintrc.json  changelog.md  package-lock.json  package.json
types/: dashboard.ts
(+212 files in other folders)
