[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "xuews",email = "lenglengzailuguan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.20,<0.4.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pylint (>=3.3.5,<4.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-core (>=0.3.43,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langgraph (>=0.3.16,<0.4.0)",
    "langsmith (>=0.3.16,<0.4.0)",
    "langchain-anthropic (>=0.3.10,<0.4.0)",
    "langgraph-cli (>=0.1.77,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

