[project]
name = "ai-core"
version = "0.1.0"
description = ""
authors = [
    {name = "xuews",email = "lenglengzailuguan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"  # 修改这里，明确上限
dependencies = [
    "langchain[openai] (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"

